chore(fix): z-index issue with the new chat modal + add translations

--- a/assets/styles/base.less
+++ b/assets/styles/base.less
@@ -586,3 +586,8 @@ strong {
   animation-duration: 2000ms;
   animation-iteration-count: infinite;
 }
+
+// Swiper
+.sidebar-container.swiper-slide.swiper-slide-active {
+  transform: none;
+}
